support both ports 35357 and 5000

--- a/provisioning/roles/keystone/files/keystone-modwsgi.conf
+++ b/provisioning/roles/keystone/files/keystone-modwsgi.conf
@@ -1,4 +1,5 @@
 Listen 35357
+Listen 5000
 
 <Location /Shibboleth.sso>
        SetHandler shib
@@ -17,6 +18,25 @@ Listen 35357
 <VirtualHost *:35357>
     WSGIDaemonProcess keystone-admin processes=1 threads=1 user=keystone group=keystone
     WSGIProcessGroup keystone-admin
+    WSGIScriptAlias / /var/www/keystone/admin
+    WSGIApplicationGroup %{GLOBAL}
+
+    <IfVersion >= 2.4>
+      ErrorLogFormat "%{cu}t %M"
+    </IfVersion>
+    LogFormat "%h %u %t \"%r\" %>s  \"%{Referer}i\" \"%{User-Agent}i\" %X  took %D ms" log_format
+
+    ErrorLog /var/log/keystone/keystone_modwsgi.log
+    CustomLog /var/log/keystone/keystone_access.log log_format
+
+   # %SSLENGINE%
+   # %SSLCERTFILE%
+   # %SSLKEYFILE%
+</VirtualHost>
+
+<VirtualHost *:5000>
+    WSGIDaemonProcess keystone-public processes=1 threads=1 user=keystone group=keystone
+    WSGIProcessGroup keystone-public
     WSGIScriptAlias / /var/www/keystone/admin
     WSGIApplicationGroup %{GLOBAL}
 
