--- a/provisioning/roles/keystone/files/logging.conf
+++ b/provisioning/roles/keystone/files/logging.conf
@@ -1,8 +1,8 @@
 [loggers]
-keys=root,access,keystone
+keys=root,access
 
 [handlers]
-keys=file,access_file,devel
+keys=production,file,access_file,devel
 
 [formatters]
 keys=minimal,normal,debug
@@ -21,10 +21,6 @@ level=INFO
 qualname=access
 handlers=access_file
 
-[logger_keystone]
-level=DEBUG
-qualname=keystone
-handlers=devel
 
 ################
 # Log Handlers #
@@ -40,19 +36,19 @@ args=(('localhost', handlers.SYSLOG_UDP_PORT), handlers.SysLogHandler.LOG_USER)
 class=handlers.WatchedFileHandler
 level=WARNING
 formatter=normal
-args=('/var/log/keystone/keystone.log',)
+args=('error.log',)
 
 [handler_access_file]
 class=handlers.WatchedFileHandler
 level=INFO
 formatter=minimal
-args=('/var/log/keystone/keystone.log',)
+args=('access.log',)
 
 [handler_devel]
-class=handlers.WatchedFileHandler
-level=DEBUG
+class=StreamHandler
+level=NOTSET
 formatter=debug
-args=('/var/log/keystone/keystone.log',)
+args=(sys.stdout,)
 
 
 ##################
@@ -67,4 +63,3 @@ format=(%(name)s): %(asctime)s %(levelname)s %(message)s
 
 [formatter_debug]
 format=(%(name)s): %(asctime)s %(levelname)s %(module)s %(funcName)s %(message)s
-
