--- a/provisioning/roles/keystone_data/tasks/populate_data.yml
+++ b/provisioning/roles/keystone_data/tasks/populate_data.yml
@@ -1,15 +1,15 @@
 ---
 
 - name: keystone_data | populate data | copy data file
-  copy: src=sample_domain_data.sh dest=/tmp mode=0777
+  copy: src=sample_data.sh dest=/tmp mode=0777
   sudo: yes
   tags: data
   
 - name: keystone_data | populate data | runs the sample data
   command: "{{ item }}" 
   with_items:     
-     /tmp/sample_domain_data.sh  
+     /tmp/sample_data.sh  
   environment:
-     ADMIN_PASSWORD: password
+     ADMIN_PASSWORD: secret
   tags: data
   
